# coc-project-dir-issue

./: README.md  pyproject.toml  pyrightconfig.json
src/app/: package-lock.json  settings.py
src/app/assets/: test.js
src/app/core/: test.py
