[tool.poetry]
name = "test-project-dir"
version = "0.1.0"
description = ""
authors = ["Serg Tereshchenko <serg.partizan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
